--- a/pages/checkout.html
+++ b/pages/checkout.html
@@ -3,7 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>En un cumple</title>
+    <title>En un cumple!</title>
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/style.css" async />
   </head>
   <body>
     <header>
@@ -83,21 +88,98 @@
                 style="color: #ffffff"
               ></i>
             </a>
-            <button id='cart' class="text-reset me-3">
+            <a href="pages/carrito.html" class="text-reset me-3">
               <i
                 class="fa-solid fa-cart-shopping fa-lg"
                 style="color: #ffffff"
               ></i>
-            </button>
+            </a>
           </div>
         </div>
       </nav>
     </header>
 
     <main>
-        <section id="checkout">
+      <section class="container my-5">
+        <div class="row d-flex justify-content-center">
+          <div class="col-8">
+            <div class="card mb-4">
+              <div class="card-header checkoutTitle py-4">
+                <h5 class="mb-0 ">Carrito - 3 artículos</h5>
+              </div>
 
-        </section>
+
+              <div id="checkoutCard" class="card-body">
+               
+              </div>
+            </div>
+            <div class="card mb-4">
+              <div class="card-body tarjetas">
+                <p><strong>Métodos de pago aceptados</strong></p>
+                <img
+                  src="../public/img/tarjetas/American_Express-Logo.wine.svg"
+                  alt=""
+                  class="me-2"
+                />
+                <img
+                  src="/public/img/tarjetas/Mastercard-Logo.wine.svg"
+                  alt=""
+                  class="me-2"
+                />
+                <img
+                  src="/public/img/tarjetas/PayPal-Logo.wine.svg"
+                  alt=""
+                  class="me-2"
+                />
+                <img
+                  src="/public/img/tarjetas/Visa_Inc.-Logo.wine.svg"
+                  alt=""
+                  class="me-2"
+                />
+              </div>
+            </div>
+          </div>
+          <div class="col-4">
+            <div class="card mb-4">
+              <div class="card-header checkoutTitle py-3">
+                <h5 class="mb-0">Resumen carrito</h5>
+              </div>
+              <div class="card-body">
+                <ul class="list-group list-group-flush">
+                  <li
+                    class="li-group-item d-flex justify-content-between align-items-center border-0 px-0 pb-0"
+                  >
+                    Productos
+                    <span>$1300.34</span>
+                  </li>
+                  <li
+                    class="li-group-item d-flex justify-content-between align-items-center border-0 px-0 pb-0"
+                  >
+                    Envío
+                    <span>Gratis</span>
+                  </li>
+                  <li
+                    class="li-group-item d-flex justify-content-between align-items-center border-0 px-0 pb-0"
+                  >
+                    <div>
+                      <strong>Total de la compra</strong>
+                      <strong>(IVA Incluido)</strong>
+                    </div>
+                    <span><strong>$1300.34</strong></span>
+                  </li>
+                </ul>
+
+                <button
+                  type="button"
+                  class="btn btn-success btn-lg btn-block mt-4"
+                >
+                  Ir a pagar
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
 
     <footer class="text-white pt-5 pb-4">
@@ -107,10 +189,12 @@
             <h5 class="text-uppercase mb-4 font-weight-bold">Nosotros</h5>
             <hr class="mb-4" />
             <p>
-              Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-              Praesentium similique fugit necessitatibus in, eius inventore
-              doloribus quod fuga totam rerum expedita a deleniti iste,
-              consequatur alias neque quos laboriosam asperiores.
+              Creemos fervientemente en la importancia de la conexión humana, la
+              risa y la camaradería en la era digital actual. Nuestro objetivo
+              es ofrecerte una amplia gama de juegos de mesa diseñados
+              especialmente para adultos, que te permitirán desconectar de las
+              pantallas y sumergirte en experiencias de juego auténticas e
+              inolvidables.
             </p>
           </div>
           <div class="col-md-2 col-lg-3 col-xl-3 mx-auto mt-3">
@@ -125,30 +209,12 @@
               <a href="#">Tus ordenes</a>
             </p>
             <p>
-              <a href="#">Manejo de cuenta</a>
+              <a href="#">FAQ</a>
             </p>
             <p>
               <a href="#">Ayuda</a>
             </p>
           </div>
-
-          <!-- <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3">
-              <h5 class="text-uppercase mb-4 font-weight-bold">Haz dinero</h5>
-              <hr class="mb-4" />
-              <p>
-                <a href="#">Vende productos en nuestro sitio</a>
-              </p>
-              <p>
-                <a href="#">Anuncios</a>
-              </p>
-              <p>
-                <a href="#">Afiliate</a>
-              </p>
-              <p>
-                <a href="#">Publica</a>
-              </p>
-            </div> -->
-
           <div class="col-md-2 col-lg-3 col-xl-3 mx-auto mt-3">
             <h5 class="text-uppercase mb-4 font-weight-bold text-tea-600">
               Contacto
