--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -133,9 +133,9 @@
           <div class="textAndImageContainer">
             <p class="nostalgicText">
               ¿QUIÉN NO HA JUGADO JUEGOS DE MESA DE PEQUEÑO? SOMOS UNA EMPRESA
-              CONVENCIDA DE QUE PODEMOS CONTINUAR CON LA DIVERSIÓN MÁS ALLÁ DE LAS
-              EDADES. PARA AQUELLOS AMANTES NOSTÁLGICOS DEL CÁLIDO ENCUENTRO
-              HUMANO DECIDIMOS CREAR UN ESPACIO ATEMPORAL DONDE......
+              CONVENCIDA DE QUE PODEMOS CONTINUAR CON LA DIVERSIÓN MÁS ALLÁ DE
+              LAS EDADES. PARA AQUELLOS AMANTES NOSTÁLGICOS DEL CÁLIDO ENCUENTRO
+              HUMANO DECIDIMOS CREAR UN ESPACIO ATEMPORAL DONDE LAS RISAS, LA ESTRATEGIA Y LA EMOCIÓN SE FUSIONAN.
             </p>
             <img class="nostalgicImage" src="../public/img/us4.jpg" alt="" />
           </div>
@@ -151,10 +151,11 @@
             <h5 class="text-uppercase mb-4 font-weight-bold">Nosotros</h5>
             <hr class="mb-4" />
             <p>
-              Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-              Praesentium similique fugit necessitatibus in, eius inventore
-              doloribus quod fuga totam rerum expedita a deleniti iste,
-              consequatur alias neque quos laboriosam asperiores.
+              Creemos fervientemente en la importancia de la conexión humana, la
+              risa y la camaradería en la era digital actual. Nuestro objetivo
+              es ofrecerte una amplia gama de juegos de mesa diseñados
+              especialmente para adultos, que te permitirán desconectar de las
+              pantallas y sumergirte en experiencias de juego auténticas e inolvidables.
             </p>
           </div>
           <div class="col-md-2 col-lg-3 col-xl-3 mx-auto mt-3">
@@ -169,30 +170,12 @@
               <a href="#">Tus ordenes</a>
             </p>
             <p>
-              <a href="#">Manejo de cuenta</a>
+              <a href="#">FAQ</a>
             </p>
             <p>
               <a href="#">Ayuda</a>
             </p>
           </div>
-
-          <!-- <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3">
-            <h5 class="text-uppercase mb-4 font-weight-bold">Haz dinero</h5>
-            <hr class="mb-4" />
-            <p>
-              <a href="#">Vende productos en nuestro sitio</a>
-            </p>
-            <p>
-              <a href="#">Anuncios</a>
-            </p>
-            <p>
-              <a href="#">Afiliate</a>
-            </p>
-            <p>
-              <a href="#">Publica</a>
-            </p>
-          </div> -->
-
           <div class="col-md-2 col-lg-3 col-xl-3 mx-auto mt-3">
             <h5 class="text-uppercase mb-4 font-weight-bold text-tea-600">
               Contacto
@@ -210,7 +193,6 @@
               <li class="p-footer fa fa-phone me-3">1131225993</li>
             </p>
           </div>
-
           <div class="row">
             <iframe
               class="mb-4 mt-4"
