--- a/pages/productos.html
+++ b/pages/productos.html
@@ -83,7 +83,7 @@
             <a href="pages/carrito.html" class="text-reset me-3"
               ><i class="fa-solid fa-user fa-lg" style="color: #ffffff"></i
             ></a>
-            <a href="#"  class="text-reset me-3"
+            <a href="#" class="text-reset me-3"
               ><i
                 class="fa-solid fa-heart fa-beat fa-lg"
                 style="color: #ffffff"
@@ -157,10 +157,11 @@
             <h5 class="text-uppercase mb-4 font-weight-bold">Nosotros</h5>
             <hr class="mb-4" />
             <p>
-              Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-              Praesentium similique fugit necessitatibus in, eius inventore
-              doloribus quod fuga totam rerum expedita a deleniti iste,
-              consequatur alias neque quos laboriosam asperiores.
+              Creemos fervientemente en la importancia de la conexión humana, la
+              risa y la camaradería en la era digital actual. Nuestro objetivo
+              es ofrecerte una amplia gama de juegos de mesa diseñados
+              especialmente para adultos, que te permitirán desconectar de las
+              pantallas y sumergirte en experiencias de juego auténticas e inolvidables.
             </p>
           </div>
           <div class="col-md-2 col-lg-3 col-xl-3 mx-auto mt-3">
@@ -175,30 +176,12 @@
               <a href="#">Tus ordenes</a>
             </p>
             <p>
-              <a href="#">Manejo de cuenta</a>
+              <a href="#">FAQ</a>
             </p>
             <p>
               <a href="#">Ayuda</a>
             </p>
           </div>
-
-          <!-- <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3">
-            <h5 class="text-uppercase mb-4 font-weight-bold">Haz dinero</h5>
-            <hr class="mb-4" />
-            <p>
-              <a href="#">Vende productos en nuestro sitio</a>
-            </p>
-            <p>
-              <a href="#">Anuncios</a>
-            </p>
-            <p>
-              <a href="#">Afiliate</a>
-            </p>
-            <p>
-              <a href="#">Publica</a>
-            </p>
-          </div> -->
-
           <div class="col-md-2 col-lg-3 col-xl-3 mx-auto mt-3">
             <h5 class="text-uppercase mb-4 font-weight-bold text-tea-600">
               Contacto
