--- a/pages/checkout.html
+++ b/pages/checkout.html
@@ -49,7 +49,10 @@
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link" style="color: #ffffff" href="#"
+                <a
+                  class="nav-link"
+                  style="color: #ffffff"
+                  href="./productos.html"
                   >Productos</a
                 >
               </li>
@@ -104,18 +107,18 @@
         <div class="row d-flex justify-content-center">
           <div class="col-8">
             <div class="card mb-4">
-              <div class="card-header checkoutTitle py-4">
-                <h5 class="mb-0 ">Carrito - 3 artículos</h5>
+              <div class="card-header headerCheckOut checkoutTitle py-4">
+                <h5 class="mb-0"><strong>Carrito - 3 artículos</strong></h5>
               </div>
 
-
-              <div id="checkoutCard" class="card-body">
-               
-              </div>
+              <div id="checkoutCard" class="card-body"></div>
             </div>
             <div class="card mb-4">
+              <div class="card-header headerCheckOut checkoutTitle py-4">
+                <h5 class="mb-0"><strong>Métodos de pago aceptados</strong></h5>
+              </div>
               <div class="card-body tarjetas">
-                <p><strong>Métodos de pago aceptados</strong></p>
+                <p><strong></strong></p>
                 <img
                   src="../public/img/tarjetas/American_Express-Logo.wine.svg"
                   alt=""
@@ -142,7 +145,7 @@
           <div class="col-4">
             <div class="card mb-4">
               <div class="card-header checkoutTitle py-3">
-                <h5 class="mb-0">Resumen carrito</h5>
+                <h5 class="mb-0 headerCheckOut"> <strong>Resumen carrito</strong></h5>
               </div>
               <div class="card-body">
                 <ul class="list-group list-group-flush">
