--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -7,6 +7,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="./css/style.css" async />
     <title>En un cumple!</title>
   </head>
   <body>
