--- a/pages/productos.html
+++ b/pages/productos.html
@@ -112,6 +112,7 @@
             <ul id="cartItemsList"></ul>
             <p>Total: $<span id="cartTotal">0</span></p>
             <a id="checkoutButton" href="./checkout.html">Finalizar Compra</a>
+            <a id="vaciarCarritoButton" href="./checkout.html">Vaciar carrito</a>
           </div>
         </div>
         <div
