--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 <a
                   class="nav-link"
                   style="color: #ffffff"
-                  href="pages/nosotros.html"
+                  href="pages/productos.html"
                   >Productos</a
                 >
               </li>
