Finishes the card functionality

--- a/pages/productos.html
+++ b/pages/productos.html
@@ -109,12 +109,10 @@
           <div class="modal-content">
             <span class="close-button">&times;</span>
             <h2>Carrito de Compras</h2>
-            <ul id="cartItemsList">
-             
-            </ul>
+            <ul id="cartItemsList"></ul>
             <p>Total: $<span id="cartTotal">0</span></p>
             <a id="checkoutButton" href="./checkout.html">Finalizar Compra</a>
-            <a id="vaciarCarritoButton" >Vaciar carrito</a>
+            <a id="vaciarCarritoButton">Vaciar carrito</a>
           </div>
         </div>
         <div
@@ -131,7 +129,7 @@
         >
           <h2>Ofertas</h2>
         </div>
-
+        <input type="text" />
         <div
           id="offersContainer"
           class="container-fluid d-flex flex-wrap justify-content-evenly mt-5 mb-5"
@@ -162,7 +160,8 @@
               risa y la camaradería en la era digital actual. Nuestro objetivo
               es ofrecerte una amplia gama de juegos de mesa diseñados
               especialmente para adultos, que te permitirán desconectar de las
-              pantallas y sumergirte en experiencias de juego auténticas e inolvidables.
+              pantallas y sumergirte en experiencias de juego auténticas e
+              inolvidables.
             </p>
           </div>
           <div class="col-md-2 col-lg-3 col-xl-3 mx-auto mt-3">
