Finishes checkout page

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             <a href="#" class="text-reset me-3"
               ><i class="fa-solid fa-user fa-lg" style="color: #ffffff"></i
             ></a>
-            <a href="#" class="text-reset me-3"
+            <a href="./pages/favoritos.html" class="text-reset me-3"
               ><i
                 class="fa-solid fa-heart fa-beat fa-lg"
                 style="color: #ffffff"
