--- a/pages/productos.html
+++ b/pages/productos.html
@@ -65,7 +65,7 @@
             </ul>
           </div>
           <div class="d-flex align-items-center">
-            <a href="pages/carrito.html" class="text-reset me-3">
+            <a href="#" class="text-reset me-3">
               <form class="d-flex">
                 <input
                   class="form-control me-2"
@@ -80,7 +80,7 @@
                   ></i>
                 </button></form
             ></a>
-            <a href="pages/carrito.html" class="text-reset me-3"
+            <a href="#" class="text-reset me-3"
               ><i class="fa-solid fa-user fa-lg" style="color: #ffffff"></i
             ></a>
             <a href="#" class="text-reset me-3"
@@ -254,6 +254,7 @@
       </div>
     </footer>
 
+    <script src="sweetalert2.all.min.js"></script>
     <script type="module" src="/productos.js"></script>
     <script type="module" src="../utils/cart.js"></script>
   </body>
