--- a/pages/checkout.html
+++ b/pages/checkout.html
@@ -108,7 +108,9 @@
           <div class="col-8">
             <div class="card mb-4">
               <div class="card-header headerCheckOut checkoutTitle py-4">
-                <h5 class="mb-0"><strong>Carrito - 3 artículos</strong></h5>
+                <h5 class="mb-0">
+                  Cantidad de artículos <strong id="checkOutUnidades"></strong>
+                </h5>
               </div>
 
               <div id="checkoutCard" class="card-body"></div>
@@ -145,7 +147,9 @@
           <div class="col-4">
             <div class="card mb-4">
               <div class="card-header checkoutTitle py-3">
-                <h5 class="mb-0 headerCheckOut"> <strong>Resumen carrito</strong></h5>
+                <h5 class="mb-0 headerCheckOut">
+                  <strong>Resumen carrito</strong>
+                </h5>
               </div>
               <div class="card-body">
                 <ul class="list-group list-group-flush">
@@ -153,7 +157,7 @@
                     class="li-group-item d-flex justify-content-between align-items-center border-0 px-0 pb-0"
                   >
                     Productos
-                    <span>$1300.34</span>
+                    <span id="subtotal"></span>
                   </li>
                   <li
                     class="li-group-item d-flex justify-content-between align-items-center border-0 px-0 pb-0"
@@ -168,7 +172,7 @@
                       <strong>Total de la compra</strong>
                       <strong>(IVA Incluido)</strong>
                     </div>
-                    <span><strong>$1300.34</strong></span>
+                    <span>$<strong id="total"></strong></span>
                   </li>
                 </ul>
 
@@ -290,6 +294,7 @@
         </div>
       </div>
     </footer>
+    <script src="sweetalert2.all.min.js"></script>
     <script type="module" src="/checkout.js"></script>
   </body>
 </html>
