--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -67,7 +67,7 @@
             </ul>
           </div>
           <div class="d-flex align-items-center">
-            <a href="pages/carrito.html" class="text-reset me-3">
+            <a href="#" class="text-reset me-3">
               <form class="d-flex">
                 <input
                   class="form-control me-2"
@@ -82,16 +82,16 @@
                   ></i>
                 </button></form
             ></a>
-            <a href="pages/carrito.html" class="text-reset me-3"
+            <a href="#" class="text-reset me-3"
               ><i class="fa-solid fa-user fa-lg" style="color: #ffffff"></i
             ></a>
-            <a href="pages/carrito.html" class="text-reset me-3"
+            <a href="#" class="text-reset me-3"
               ><i
                 class="fa-solid fa-heart fa-beat fa-lg"
                 style="color: #ffffff"
               ></i>
             </a>
-            <a href="pages/carrito.html" class="text-reset me-3">
+            <a id="cart" class="text-reset me-3">
               <i
                 class="fa-solid fa-cart-shopping fa-lg"
                 style="color: #ffffff"
@@ -101,6 +101,19 @@
         </div>
       </nav>
     </header>
+
+    <section>
+      <div id="cartModal" class="modal">
+        <div class="modal-content">
+          <span class="close-button">&times;</span>
+          <h2>Carrito de Compras</h2>
+          <ul id="cartItemsList"></ul>
+          <p>Total: $<span id="cartTotal">0</span></p>
+          <a id="checkoutButton" href="./checkout.html">Finalizar Compra</a>
+          <a id="vaciarCarritoButton">Vaciar carrito</a>
+        </div>
+      </div>
+    </section>
 
     <section id="contactSection">
       <div class="contactContainer">
@@ -142,5 +155,6 @@
     </section>
 
     <script type="module" src="/contacto.js"></script>
+    <script type="module" src="../utils/cart.js"></script>
   </body>
 </html>
