finishes the second task

--- a/pages/checkout.html
+++ b/pages/checkout.html
@@ -295,6 +295,6 @@
       </div>
     </footer>
     <script src="sweetalert2.all.min.js"></script>
-    <script type="module" src="/checkout.js"></script>
+    <script type="module" src="../utils/checkout.js"></script>
   </body>
 </html>
