--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -154,7 +154,7 @@
       </div>
     </section>
 
-    <script type="module" src="/contacto.js"></script>
+    <script type="module" src="../utils/contacto.js"></script>
     <script type="module" src="../utils/cart.js"></script>
   </body>
 </html>
