--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -258,7 +258,7 @@
       </div>
     </footer>
 
-    <script type="module" src="/nosotros.js"></script>
+    <script type="module" src="../utils/nosotros.js"></script>
     <script type="module" src="../utils/cart.js"></script>
 
   </body>
