--- a/pages/productos.html
+++ b/pages/productos.html
@@ -255,7 +255,7 @@
     </footer>
 
     <script src="sweetalert2.all.min.js"></script>
-    <script type="module" src="/productos.js"></script>
+    <script type="module" src="../utils/productos.js"></script>
     <script type="module" src="../utils/cart.js"></script>
   </body>
 </html>
