--- a/index.html
+++ b/index.html
@@ -110,8 +110,8 @@
           <h2>Carrito de Compras</h2>
           <ul id="cartItemsList"></ul>
           <p>Total: $<span id="cartTotal">0</span></p>
-          <a id="checkoutButton" href="./checkout.html">Finalizar Compra</a>
-          <a id="vaciarCarritoButton" href="./checkout.html">Vaciar carrito</a>
+          <a id="checkoutButton" href="./pages/checkout.html">Finalizar Compra</a>
+          <a id="vaciarCarritoButton">Vaciar carrito</a>
         </div>
       </div>
       <section class="img-container position-relative">
@@ -267,7 +267,7 @@
       </div>
     </footer>
 
-    <script type="module" src="/main.js"></script>
+    <script type="module" src="./utils/main.js"></script>
     <script type="module" src="./utils/cart.js"></script>
   </body>
 </html>
