--- a/pages/favoritos.html
+++ b/pages/favoritos.html
@@ -237,6 +237,6 @@
       </div>
     </footer>
 
-    <script type="module" src="/favoritos.js"></script>
+    <script type="module" src="../utils/favoritos.js"></script>
   </body>
 </html>
